@@ -1,3 +1,8 @@
+2016-06-10  Gerrit Holl  <g.holl@reading.ac.uk>
+
+	* typhon/datasets/dataset.py: Use the logging module to warn when no
+	directories are found.  Inherit InvalidDataError from ValueError.
+		
 2016-06-03  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/datasets/dataset.py: Added capability to skip the first
